--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.11.18
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
+astroid==3.3.9
 async-timeout==5.0.1
 attrs==25.3.0
 certifi==2025.1.31
@@ -19,6 +20,8 @@ httpx==0.28.1
 huggingface-hub==0.30.2
 idna==3.10
 inquirerpy==0.3.4
+isort==6.0.1
+mccabe==0.7.0
 multidict==6.4.3
 multiprocess==0.70.16
 numpy==2.2.5
@@ -26,17 +29,21 @@ ollama==0.4.8
 packaging==25.0
 pandas==2.2.3
 pfzy==0.3.4
+platformdirs==4.3.7
 prompt_toolkit==3.0.51
 propcache==0.3.1
 pyarrow==19.0.1
 pydantic==2.11.3
 pydantic_core==2.33.1
+pylint==3.3.6
 python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.2
 requests==2.32.3
 six==1.17.0
 sniffio==1.3.1
+tomli==2.2.1
+tomlkit==0.13.2
 tqdm==4.67.1
 typing-inspection==0.4.0
 typing_extensions==4.13.2
