--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ certifi==2025.1.31
 charset-normalizer==3.4.1
 datasets==3.5.0
 dill==0.3.8
+distro==1.9.0
 exceptiongroup==1.2.2
 filelock==3.18.0
 frozenlist==1.6.0
@@ -21,11 +22,13 @@ huggingface-hub==0.30.2
 idna==3.10
 inquirerpy==0.3.4
 isort==6.0.1
+jiter==0.10.0
 mccabe==0.7.0
 multidict==6.4.3
 multiprocess==0.70.16
 numpy==2.2.5
 ollama==0.4.8
+openai==1.95.0
 packaging==25.0
 pandas==2.2.3
 pfzy==0.3.4
